<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/background_dark"
    tools:context=".WeatherMain">

    <RelativeLayout
        android:id="@+id/locationCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_icon"
            android:textSize="30sp"
            android:fontFamily="@font/weathericons_regular_webfont"
            android:textColor="@android:color/background_light"/>
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/location"
            android:text="@string/na"
            android:textSize="30sp"
            android:fontFamily="@font/weathericons_regular_webfont"
            android:textColor="@android:color/background_light"
            android:layout_toEndOf="@+id/location"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_location"
            android:textSize="15sp"
            android:textColor="@android:color/background_light"
            android:layout_toEndOf="@+id/city"
            android:id="@+id/remove_location"/>
        </RelativeLayout>

    <TextView
        android:id="@+id/updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationCity"
        android:text="@string/na"
        android:textSize="13sp"
        android:fontFamily="@font/weathericons_regular_webfont"
        android:textColor="@android:color/background_light"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/weatherIcon"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_below="@id/locationCity"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/weathericons_regular_webfont"
        android:text="\uf002"
        android:textColor="@android:color/background_light"
        android:textSize="150sp" />
    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/na"
        android:textSize="70sp"
        android:layout_below="@id/weatherIcon"
        android:textColor="@android:color/background_light"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/weatherType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Облачно"
        android:textSize="30sp"
        android:layout_below="@id/temperature"
        android:textColor="@android:color/background_light"
        android:layout_centerHorizontal="true"/>
    <GridLayout
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/weatherType"
        android:layout_marginTop="20dp"
        android:rowCount="2"
        android:columnCount="2">
        <TextView
            android:id="@+id/humidityTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:text="@string/humidityTag"/>
        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:text="@string/na"/>
        <TextView
            android:id="@+id/pressureTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:text="@string/pressureTag"/>
        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:text="@string/na"/>
        <TextView
            android:id="@+id/windTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:text="@string/windTag"/>
        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:text="@string/na"/>
    </GridLayout>
</RelativeLayout>